Quorum/Library/Tests/TypeChecker/Pass/ExpAssignTextText.quorum
class Main
    action Main
        text txt = ""
        txt = cast(text, "text")
        if txt = "text"
            output "passed"
        end
    end
end