Quorum/Library/Tests/TypeChecker/Fail/ExpAssignTextIntObj.quorum
class main
    action Main
        Integer i
        text txt = ""
        i:SetValue(5)
        txt = cast(text, i)
    end
end